--- a/Week-03-Intro-To-ML/Exercise-Logistic-Regression.ipynb
+++ b/Week-03-Intro-To-ML/Exercise-Logistic-Regression.ipynb
@@ -1114,7 +1114,7 @@
    "source": [
     "# Comparisson of the models\n",
     "\n",
-    "# when adding the new columns the new model performs exactly the same as the original model"
+    "# when adding the new columns the new model performs slightly better"
    ]
   },
   {
@@ -1224,7 +1224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# when using onlu embarked and pclass\n",
+    "# when using only embarked and pclass\n",
     "# the model performs worse in every metric even though it \n",
     "# correctly guesses 1 more survived passenger"
    ]
