upload week 8 work

--- a/Week-07-NLP/Exercise-NLP.ipynb
+++ b/Week-07-NLP/Exercise-NLP.ipynb
@@ -472,7 +472,9 @@
     "\n",
     "# this is so we can build a coherent pipeline that works in tandem and not against each other\n",
     "\n",
-    "# maybe have 2 remove punctuation functions\n"
+    "# maybe have 2 remove punctuation functions\n",
+    "\n",
+    "# what about words with hyphens like space-time continuium"
    ]
   },
   {
